--- a/nginx.conf
+++ b/nginx.conf
@@ -21,4 +21,5 @@ server {
   add_header X-Frame-Options DENY;
   add_header X-XSS-Protection "1; mode=block";
   add_header Referrer-Policy strict-origin-when-cross-origin;
+  add_header Cross-Origin-Opener-Policy same-origin-allow-popups;
 }
