--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,10 @@
           "value": "strict-origin-when-cross-origin"
         },
         {
+          "key": "Cross-Origin-Opener-Policy",
+          "value": "same-origin-allow-popups"
+        },
+        {
           "key": "Content-Security-Policy",
           "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://www.gstatic.com; connect-src 'self' https://api.prism-app.com wss://api.prism-app.com https://www.googleapis.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firebaseinstallations.googleapis.com https://firebasestorage.googleapis.com; frame-src 'self' https://accounts.google.com https://www.facebook.com https://staticxx.facebook.com;"
         },
