--- a/nginx.conf
+++ b/nginx.conf
@@ -22,4 +22,5 @@ server {
   add_header X-XSS-Protection "1; mode=block";
   add_header Referrer-Policy strict-origin-when-cross-origin;
   add_header Cross-Origin-Opener-Policy same-origin-allow-popups;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://www.gstatic.com; connect-src 'self' https://api.prism-app.com wss://api.prism-app.com https://www.googleapis.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firebaseinstallations.googleapis.com https://firebasestorage.googleapis.com; frame-src 'self' https://accounts.google.com https://www.facebook.com https://staticxx.facebook.com https://*.firebaseapp.com https://*.web.app https://prism-676a3.firebaseapp.com;";
 }
