--- a/backend/nginx/conf.d/production.conf
+++ b/backend/nginx/conf.d/production.conf
@@ -16,6 +16,14 @@ add_header X-XSS-Protection "1; mode=block";
 add_header Referrer-Policy "strict-origin-when-cross-origin";
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.prism-app.com wss://api.prism-app.com https://staging.prism-app.com;";
 
+# Dynamic CORS allowlist
+map $http_origin $cors_origin {
+    default "";
+    "https://prism-app.com" $http_origin;
+    "https://prism-five-livid.vercel.app" $http_origin;
+    "http://localhost:3000" $http_origin;
+}
+
 # HTTP to HTTPS redirect
 server {
     listen 80;
@@ -72,18 +80,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
         
-        # CORS headers for production
-        add_header 'Access-Control-Allow-Origin' 'https://prism-app.com' always;
+        # CORS headers for production (allowlist via $cors_origin)
+        if ($cors_origin != "") {
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+        }
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
         
         # Handle preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://prism-app.com';
+            if ($cors_origin != "") {
+                add_header 'Access-Control-Allow-Origin' $cors_origin;
+                add_header 'Access-Control-Allow-Credentials' 'true';
+            }
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With';
-            add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
@@ -102,14 +114,18 @@ server {
         add_header Cache-Control "public, immutable";
         
         # CORS headers for static files
-        add_header 'Access-Control-Allow-Origin' 'https://prism-app.com' always;
+        if ($cors_origin != "") {
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        }
         add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Accept,Cache-Control,Content-Type' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Cache-Control,Content-Type,Authorization' always;
         
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://prism-app.com';
+            if ($cors_origin != "") {
+                add_header 'Access-Control-Allow-Origin' $cors_origin;
+            }
             add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Accept,Cache-Control,Content-Type';
+            add_header 'Access-Control-Allow-Headers' 'Accept,Cache-Control,Content-Type,Authorization';
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
