--- a/vercel.json
+++ b/vercel.json
@@ -43,7 +43,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://www.gstatic.com; connect-src 'self' https://api.prism-app.com wss://api.prism-app.com https://octopus-app-73pgz.ondigitalocean.app https://*.ondigitalocean.app https://www.googleapis.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firebaseinstallations.googleapis.com https://firebasestorage.googleapis.com; frame-src 'self' https://accounts.google.com https://www.facebook.com https://staticxx.facebook.com https://*.firebaseapp.com https://*.web.app https://prism-676a3.firebaseapp.com;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://apis.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://www.gstatic.com; connect-src 'self' https://octopus-app-73pgz.ondigitalocean.app https://*.ondigitalocean.app https://www.googleapis.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firebaseinstallations.googleapis.com https://firebasestorage.googleapis.com https://ontoimmnycdgmxkihsss.supabase.co; frame-src 'self' https://accounts.google.com https://www.facebook.com https://staticxx.facebook.com https://*.firebaseapp.com https://*.web.app https://prism-676a3.firebaseapp.com;"
         },
         {
           "key": "Strict-Transport-Security",
