--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "test:social": "jest tests/social_posting.test.js",
     "test:digitalocean": "node scripts/test-digitalocean-deployment.js",
+    "validate:production": "node scripts/validate-production.js",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "worker": "node src/workers/index.js",
@@ -24,15 +25,18 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bull": "^4.12.2",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "cron-parser": "^4.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.2",
     "firebase-admin": "^13.6.0",
     "helmet": "^7.1.0",
@@ -43,6 +47,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "rate-limit-redis": "^5.0.0",
     "redis": "^4.6.13",
     "winston": "^3.13.0",
     "zod": "^4.1.12"
