--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^4.6.13",
+    "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "zod": "^4.1.12"
   },
