--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@supabase/supabase-js": "^2.81.1",
+    "@supabase/supabase-js": "^2.87.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bull": "^4.12.2",
@@ -43,6 +43,7 @@
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.11",
+    "openai": "^6.10.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
